fix(snackbar): Apply visibility hidden when at rest. fixes #1258

--- a/packages/mdc-snackbar/mdc-snackbar.scss
+++ b/packages/mdc-snackbar/mdc-snackbar.scss
@@ -69,7 +69,7 @@
     }
   }
 
-  &[aria-hidden] {
+  &[aria-hidden="true"] {
     visibility: hidden;
   }
 
